src/test/deca/context/invalid/intermediaire2/mots_reserves/12println.deca
// Description:
// Test du mettre le mot réservé println, en nom de variable.
//
// Resultats:
//  12println.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int println;
}